Changes to Version 2.0-13
    o Added new function 'Boot' that is a simple front-end to boot::boot that will be useful when bootstrapping regression models.  Implemented for lm and glm, but this is likely to work for many other S3 regression models with and 'update' method, 'subset' argument.
    
    o Fixed bug in 'compareCoefs' with non-full rank models
    
    o Modified 'bootCase' to return a matrix of class c("bootCase", "matrix") so generic functions can be written to summarize these objects.

    o Minor changes to the returned value of showLabels to give both the label and the corresponding row number.  showLabels documentation tweaked.

    o Improved handling of center.pch argument to ellipse() (suggestion of Rob Kushler).
    
    o New test argument for linearHypothesis.mer()  and test.statistic argument for Anova.mer() for F-tests with Kenward/Roger df, provided by pbkrtest package.
    
    o Anova.mlm() now will do univariate repeated-measures ANOVA even if the error SSP matrix is singular.
    
    o hccm() will now accept a weighted linear models (suggestion of Stefan Holst Bache).
    
    o deltaMethod.default() now applies coef() and vcov() to a model for which these are supported (generalizing a suggestion by Scott Kostyshak).
    
    o Fixed handling of labels argument in scatterplot.formula() and scatterplotMatrix.formula().

Changes to Version 2.0-12

    o modified compareCoefs to support any S4 object with that responds to the 'coefs' and 'vcov' methods (suggestion of David Hugh-Jones).

    o fixed bug in deltaMethod.surveg and deltaMethod.coxph to all use of the 'parameterNames' argument.

	o compareCoefs:  added an argument 'print' to suppress printing output.  Added support for 'lme' objects.
	
	o fixed xlab, ylab arguments and added dfn argument to confidenceEllipse() (suggestions of Michael Friendly).
	
	o moved survival from Depends to Suggests (request of Michael Friendly); added survey to Suggests.
	