@@ -1,4 +1,5 @@
 Changes to Version 2.0-13
+
     o Added new function 'Boot' that is a simple front-end to boot::boot that will be useful when bootstrapping regression models.  Implemented for lm and glm, but this is likely to work for many other S3 regression models with and 'update' method, 'subset' argument.
     
     o Fixed bug in 'compareCoefs' with non-full rank models
@@ -18,6 +19,8 @@ Changes to Version 2.0-13
     o deltaMethod.default() now applies coef() and vcov() to a model for which these are supported (generalizing a suggestion by Scott Kostyshak).
     
     o Fixed handling of labels argument in scatterplot.formula() and scatterplotMatrix.formula().
+    
+    o Fixed qqPlot.default() so that it honors line="none" (bug reported by Rob Kushler).
 
 Changes to Version 2.0-12
 
